--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.codetest</groupId>
 	<artifactId>rest-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rest-service</name>
-	<description>Demo project for Spring Boot</description>
+	<description>code test in Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
